# BaroBaro

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  ui-architecture.md  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-20-duplicate-detection-and-ordering-undo.md
docs/superpowers/specs/: 2026-06-20-duplicate-detection-and-ordering-undo-design.md
proto/: build_info.proto  config.proto  mods.proto  transmission.proto  workshop.proto
public/locales/: en.json  zh.json
scripts/: gen_proto.cjs  sync_version.cjs
src/: App.vue  i18n.ts  invokes.ts  main.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/configuration/: Cargo.toml  build.rs
src-tauri/crates/configuration/src/: lib.rs
src-tauri/crates/constants/: Cargo.toml
src-tauri/crates/constants/src/: lib.rs
src-tauri/crates/fs-utils/: Cargo.toml
src-tauri/crates/fs-utils/src/: hash.rs  lib.rs
src-tauri/crates/imagen/: Cargo.toml
src-tauri/crates/imagen/src/: lib.rs
src-tauri/crates/logger/: Cargo.toml
src-tauri/crates/logger/src/: lib.rs
src-tauri/crates/mod_analyzer/: .gitignore  Cargo.toml  build.rs
src-tauri/crates/mod_analyzer/src/: analyzer.rs  config_analyzer.rs  de.rs  hash.rs  lib.rs  manage.rs  mod_analyzer.rs  mod_list.rs  retrieve.rs
src-tauri/crates/steam-api/: .gitignore  Cargo.toml  build.rs
src-tauri/crates/steam-api/src/: de.rs  lib.rs
src-tauri/crates/steamcmd-rs/: Cargo.toml
src-tauri/crates/steamcmd-rs/src/: lib.rs
src-tauri/crates/transmission/: .gitignore  Cargo.toml  build.rs
src-tauri/crates/transmission/src/: lib.rs
src-tauri/src/: commands.rs  lib.rs  main.rs  once.rs
src/assets/: styles.css
src/components/core/: Footer.vue  Header.vue  LanguageSwitcher.vue  Layout.vue  MainContent.vue  Navigation.vue  ThemeSwitcher.vue  Title.vue  TitledPage.vue
src/components/dashboard/: ModCard.vue  ModDetails.vue  ModList.vue  ProfileSelector.vue  SearchAndFilter.vue
src/components/mod-management/: DownloadModTab.vue  InstallModTab.vue  ModGrid.vue  ModItem.vue  ModItemDisplay.vue  ModManagementTabs.vue  ProfilesTab.vue  RemoveModTab.vue  UpdateModTab.vue  WorkshopBrowse.vue  WorkshopItemDisplay.vue
src/components/profile-management/: ProfileCard.vue  ProfileEditor.vue  ProfileList.vue  ProfileSwitcher.vue
src/components/settings/: GeneralSettings.vue  PathsSettings.vue  UIPreferences.vue  VersionInfo.vue
src/components/utils/: Reveal.vue  inlineCode.vue  jumpTo.vue  refreshMods.vue
src/composables/: coloredTag.ts  network.ts  useAppInit.ts  useModManager.ts  useTheme.ts  utils.ts  workshop.ts
src/locales/: en.json  zh.json
src/router/: index.ts
src/views/dashboard/: DashboardView.vue
src/views/mods/: ModsView.vue
src/views/profiles/: ProfilesView.vue
src/views/settings/: SettingsView.vue
