[package]
name = "barobaro"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "barobaro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
built = { version = "0.8.0", features = ["chrono", "git2"] }
transmission = { path = "./crates/transmission" }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
steamcmd-rs = { path = "./crates/steamcmd-rs" }
constants = { path = "./crates/constants" }
mod_analyzer = { path = "./crates/mod_analyzer" }
logger = { path = "./crates/logger" }
configuration = { path = "./crates/configuration" }
steam-api = { path = "./crates/steam-api" }
imagen = { path = "./crates/imagen" }
once_cell = "1.21.3"
tokio = "1.47.1"
futures = "0.3.31"
prost = "0.14.1"
fs_extra = "1.3.0"


[workspace]
members = [
    "crates/*",
]

[workspace.package]
edition = "2024"
license-file = "../LICENSE"
authors = ["Whth <zettainspector@foxmail.com>"]
version = "0.1.3"
