[package]
name = "configuration"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
prost = "0.14.1"
toml = "0.9.5"
figment = { version = "0.10.19", features = ["toml"] }
logger = { path = "../logger" }


[build-dependencies]
transmission = { path = "../transmission" }
