[package]
name = "fs-utils"
edition.workspace = true
license-file.workspace = true
authors.workspace = true
version.workspace = true

[dependencies]
logger = { path = "../logger" }
walkdir = "2.5.0"
rayon = "1.12.0"

blake3 = { version = "1.8.5", features = ["rayon"] }



[dev-dependencies]

tempfile = "3.27.0"
