[package]
name = "imagen"
edition.workspace = true
license-file.workspace = true
authors.workspace = true
version.workspace = true

[dependencies]
base64 = "0.22.1"
image = "0.25.10"
libblur = { version = "0.24.0", features = ["image"] }


logger = { path = "../logger" }
rayon = "1.12.0"
thiserror = "2.0.18"
