[package]
name = "logger"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
constants = { path = "../constants" }
tracing = "0.1.41"
