[package]
name = "mod_analyzer"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
quick-xml = { version = "0.38.1", features = ["async-tokio", "serde", "serialize"] }
steam-api = { path = "../steam-api" }
logger = { path = "../logger" }
walkdir = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
constants = { path = "../constants" }
prost = "0.14.1"
fs-utils = { path = "../fs-utils" }
rayon = "1.11.0"


[dev-dependencies]
serde_json = { version = "1.0.143" }

[build-dependencies]
transmission = { path = "../transmission" }

