[package]
name = "steam-api"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "1"
logger = { path = "../logger" }

[dev-dependencies]
mockito = "1.7.0"
tokio = { version = "1.47.1", features = ["macros", "test-util"] }



