[package]
name = "steam-api"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
futures = "0.3.32"
reqwest = { version = "0.13.4", features = ["json", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2"
logger = { path = "../logger" }
prost = "0.14.4"


[dev-dependencies]
mockito = "1.7.2"
tokio = { version = "1.52.3", features = ["macros", "test-util"] }

[build-dependencies]
transmission = { path = "../transmission" }

